<?xml version="1.0" encoding="utf-8"?>
<!--
    If you translate and localize to other language,
    and if you want, please send me resource files.
    I'd like to include more locales.
-->
<resources>
  <string name="app_name">MultiPicture Live Wallpaper</string>
  <string name="app_description">Show differecnt pictures for each screen.</string>

  <string name="shortcut_name_settings">MultiPicture Live Wallpaper Settings</string>

  <string name="plugin_search_button">Search Plugins</string>
  <string name="pref_use_default">Same as common settings</string>
  <string name="pref_screen_type_file_desc">Single Picture : %s</string>
  <string name="pref_screen_type_folder_desc">Picture Folder : %s</string>
  <string name="pref_screen_type_bucket_desc">Album : %s</string>

  <string name="pref_cat_screen_title">Screen Settings</string>

  <string name="pref_group_screen_default_title">Common settings</string>
  <string name="pref_group_screen_default_summary">Common settings for unspecified case in individual settings.</string>

  <string name="pref_cat_picture_screen_title">Screen %d settings</string>
  <string name="pref_cat_picture_screen_summary">Individual settings for screen %d.</string>
  <string name="pref_cat_picture_screen_left_summary">Individual settings for screen %d. (Leftmost screen)</string>

  <string name="pref_add_screen_title">Add individual settings</string>
  <string name="pref_add_screen_summary">Add individual settings for specified screen.</string>
  <string name="pref_add_screen_dialog_title">Select screen</string>

  <string name="pref_screen_val_summary">\n%s</string>

  <string name="pref_screen_type_title">Picture source</string>
  <string name="pref_screen_type_base_summary">Select pictures to display.</string>

  <string name="pref_screen_bgcolor_title">Background Color</string>
  <string name="pref_screen_bgcolor_summary">Background Color of screen.</string>

  <string name="pref_screen_clipratio_title">Crop/Resize ratio</string>
  <string name="pref_screen_clipratio_summary">How may crop picture to fit screen size.</string>

  <string name="pref_screen_saturation_title">Decrease saturation</string>
  <string name="pref_screen_saturation_summary">Decrease saturation to show as grayscale.</string>

  <string name="pref_screen_opacity_title">Decrease opacity</string>
  <string name="pref_screen_opacity_summary">Decrease opacity (increase transparency).</string>

  <string name="pref_screen_keyguard_enable_title">Use lock screen settings</string>
  <string name="pref_screen_keyguard_enable_summary">Show lock screen with another settings.</string>

  <string name="pref_group_screen_keyguard_title">Lock screen settings</string>
  <string name="pref_group_screen_keyguard_summary">Settings for lock screen.</string>

  <string name="pref_cat_draw_title">Drawing Settings</string>

  <string name="pref_draw_transition_title">Transition type</string>
  <string name="pref_draw_transition_summary">Transition type when switching screen.</string>

  <string name="pref_draw_reflection_top_title">Show reflection (top)</string>
  <string name="pref_draw_reflection_top_summary">Show reflection at top of the picture.</string>

  <string name="pref_draw_reflection_bottom_title">Show reflection (bottom)</string>
  <string name="pref_draw_reflection_bottom_summary">Show reflection at bottom of the picture.</string>

  <string name="pref_cat_changing_title">Changing Settings</string>

  <string name="pref_folder_changetap_title">Double Tap to change picture</string>
  <string name="pref_folder_changetap_summary">When double tap, change picture from available pictures.</string>

  <string name="pref_folder_duration_title">Picture change interval</string>
  <string name="pref_folder_duration_summary">Interval to change picture from available pictures.</string>

  <string name="pref_cat_advanced">Advanced Settings</string>

  <string name="pref_workaround_launcher_title">Workaround for some home application</string>
  <string name="pref_workaround_launcher_summary">Workaround for using with some home application, such as pictures are not changed when switching screen, etc.</string>

  <string name="pref_memory_max_title">Maximum memory usage</string>
  <string name="pref_memory_max_summary">For image quality and performance.</string>
  <string name="pref_memory_max_confirm">Increasing the memory usage may be causes force close by memory insufficient for some devices or some pictures.\nIn these cases, choose lower memory usage.</string>

  <string name="pref_color_fullcolor_title">Color depth</string>
  <string name="pref_color_fullcolor_summary">For image quality and performance.</string>

  <string name="pref_cat_other">Other</string>
  <string name="pref_other_dnt_title">Donation version</string>
  <string name="pref_other_dnt_summary">Get donation version.</string>
  <string name="pref_other_wlist_title">Send something to developer</string>
  <string name="pref_other_wlist_description">If you like this application and you send something to developer, it maybe help the future development.\n\nPress OK to open following URL.\n%s</string>

  <string name="pref_single_picture_title">Single Picture</string>

  <string name="pref_album_title">Album</string>
  <string name="pref_cat_album_title">Album Selection</string>
  <string name="pref_no_bucket_exist_msg">Album is not exists.</string>
  <string name="pref_no_bucket_select_msg">Album is not selected.</string>

  <string name="pref_folder_title">Picture Folder</string>
  <string name="pref_cat_folder_title">Picture Folder Selection</string>
  <string name="pref_folder_path_title">Folder Path</string>
  <string name="pref_folder_path_summary">Path to the Picture Folder.</string>
  <string name="pref_folder_recursive_title">Search folder recursively</string>
  <string name="pref_folder_recursive_summary">Search pictures recursively under specified folder.</string>
  <string name="pref_no_folder_select_msg">Folder is not selected.</string>

  <string name="pref_cat_selection_title">Selection Settings</string>

  <string name="pref_select_order_title">Picture selection order</string>
  <string name="pref_select_order_summary">Selection order when changing picture.</string>

  <string name="pref_select_rescan_title">Rescan pictures when modified</string>
  <string name="pref_select_rescan_summary">Rescan pictures when picture is modified; e.g. when picture file is add, delete, modified, etc.</string>

  <string name="pref_select_use_mediaprovider_title">Search from gallery</string>
  <string name="pref_select_use_mediaprovider_summary">If disabled, it may take time to load.</string>

  <string name="menu_share">Share</string>
  <string name="menu_qr">QR Code</string>
  <string name="menu_report">Report/Request</string>

  <string name="album_loading">Loading...</string>
  <string name="album_saving">Saving...</string>

  <string name="folder_picker_title">Select Folder</string>
  <string name="folder_up">../ (Up folder)</string>
  <string name="folder_loading">Loading...</string>

  <string name="str_pic_not_avail_1">Screen %d: Picture is unavailable.</string>
  <string name="str_pic_not_avail_2">Need to setup or reload.</string>
  <string name="str_pic_not_avail_keyguard">Lock Screen: Picture is unavailable.</string>

  <string name="chooser_wallpaper">Select wallpaper from</string>
  <string name="chooser_live_wallpaper">Select \'Live wallpapers\'</string>
  <string name="chooser_navigation">Select \'MultiPicture Live Wallpaper\'</string>
  <string name="lwp_not_supported">Live Wallpaper may not supported.</string>
  <string name="mailer_not_found">Email application is not found.</string>
  <string name="gallery_not_found">Gallery application is not found.</string>
  <string name="market_not_found">Market application is not found.</string>
  <string name="picsource_not_found">Picture source plugin is not found.</string>

  <!-- DO NOT localize below -->
  <string name="workaround_default">htc_sense</string>
  <string name="plugin_search_uri">market://search?q=MultiPicture-Live-Wallpaper</string>
  <string name="dnt_search_uri">market://search?q=pname:org.tamanegi.wallpaper.multipicture.dnt</string>

  <string name="share_text">MultiPicture Live Wallpaper http://market.android.com/details?id=org.tamanegi.wallpaper.multipicture</string>
  <string name="report_uri">mailto:lllllT-mplr@tamanegi.org</string>
  <string name="report_subject">MultiPicture Live Wallpaper</string>

  <string name="wlist_uri">http://www.amazon.co.jp/registry/wishlist/1V67BJUEPAP4V</string>
</resources>
