<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/pref_cat_folder_title">
    <Preference
       android:key="path"
       android:persistent="false"
       android:title="@string/pref_folder_path_title"
       android:summary="@string/pref_folder_path_summary"
       />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_cat_selection_title">
    <ListPreference
       android:key="order"
       android:persistent="false"
       android:title="@string/pref_select_order_title"
       android:summary="@string/pref_select_order_summary"
       android:entries="@array/pref_select_order_entries"
       android:entryValues="@array/pref_select_order_entryvalues"
       android:defaultValue="random"
       />
    <CheckBoxPreference
       android:key="recursive"
       android:persistent="false"
       android:title="@string/pref_folder_recursive_title"
       android:summary="@string/pref_folder_recursive_summary"
       android:defaultValue="true"
       />
    <CheckBoxPreference
       android:key="rescan"
       android:persistent="false"
       android:title="@string/pref_select_rescan_title"
       android:summary="@string/pref_select_rescan_summary"
       android:defaultValue="true"
       />
    <CheckBoxPreference
       android:key="use_mediaprovider"
       android:persistent="false"
       android:title="@string/pref_select_use_mediaprovider_title"
       android:summary="@string/pref_select_use_mediaprovider_summary"
       android:defaultValue="true"
       />
  </PreferenceCategory>

</PreferenceScreen>
