<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/pref_cat_album_title"
                      android:key="album_cat">
    <!-- will be filled by AlbumSource#onCreate -->
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_cat_selection_title">
    <ListPreference
       android:key="order"
       android:persistent="false"
       android:title="@string/pref_select_order_title"
       android:summary="@string/pref_select_order_summary"
       android:entries="@array/pref_select_order_entries"
       android:entryValues="@array/pref_select_order_entryvalues"
       android:defaultValue="random"
       />
    <CheckBoxPreference
       android:key="rescan"
       android:persistent="false"
       android:title="@string/pref_select_rescan_title"
       android:summary="@string/pref_select_rescan_summary"
       android:defaultValue="true"
       />
  </PreferenceCategory>

</PreferenceScreen>
